# finch

./: .gitignore  .hlint.yaml  Finch.cabal  LICENSE  Main.hs  Makefile  README.md  cabal.project  finch.cabal  fitch-editor.cabal  flake.nix  fourmolu.yaml  test
.github/workflows/: main.yaml
apps/: FOL.hs  Prop.hs
src/: App.hs  Util.hs
src/App/: Decoder.hs  Entry.hs  Model.hs  Runner.hs  Syntax.hs  URLDecoder.hs  Update.hs  Views.hs
src/Fitch/: Proof.hs  Unification.hs  Verification.hs
src/Parser/: Formula.hs  IncompleteProof.hs  Lexer.hs  Prelude.hs  Proof.hs  Rule.hs  Util.hs
src/Proof/: Syntax.hs  Util.hs
src/Specification/: FOL.hs  Prop.hs  Types.hs
static/: DragDropTouch.js  Navigation.js  index.html  index.js  style.css
static/js/: index.js
static/sass/: header.sass  proof.sass  shared.sass  sidebar.sass  style.sass
tests/: FOLTest.hs  FitchTest.hs  Main.hs  ProofSyntax.hs  test.hs
tests/Examples/: Proof1.fitch  SimpleProof.fitch
tests/InvalidFormulae/: notFresh1%3.fitch  notFresh2%2.fitch  notFresh3%2.fitch
tests/InvalidProofs/: eqE1.fitch  eqE2.fitch
tests/InvalidRules/: RSubproof%3.fitch  botE%2.fitch  conjE%2.fitch  conjI%3.fitch  disjE%6.fitch  disjI2%2.fitch  existsE%5.fitch  existsI%2.fitch  forallE%2.fitch  forallI%3.fitch  implE%3.fitch  implI%3.fitch  negE%3.fitch  negI1%4.fitch  negI2%3.fitch  negnegE%2.fitch  topI%1.fitch
tests/ValidProofs/: arrowE.fitch  arrowI.fitch  botE.fitch  conjE1.fitch  conjE2.fitch  conjI.fitch  disjE.fitch  disjI1.fitch  disjI2.fitch  eqE.fitch  eqI.fitch  existsE.fitch  existsI.fitch  forallE.fitch  forallI.fitch  negE.fitch  negI.fitch  negnegE.fitch  topI.fitch
