cabal-version: 3.0
name: Finch
version: 0.1.0.0
synopsis: Editing fitch-style natural deduction proofs.
description: A web application for editing fitch-style natural deduction proofs with builtin checker.
license: BSD-3-Clause
license-file: LICENSE
author: Reijix <leon.vatthauer@fau.de>
maintainer: Reijix <leon.vatthauer@fau.de>
copyright: Leon Vatthauer @ 2026
category: Web
build-type: Simple

source-repository head
  type: git
  location: https://github.com/Reijix/finch.git

common warnings
  ghc-options:
    -funbox-strict-fields
    -O2
    -ferror-spans
    -fspecialise-aggressively
    -Wall

common options
  if arch(wasm32)
    ghc-options:
      -no-hs-main
      -optl-mexec-model=reactor
      "-optl-Wl,--export=hs_start"

    cpp-options:
      -DWASM

  if arch(javascript)
    ld-options:
      -sEXPORTED_RUNTIME_METHODS=HEAP8

test-suite test
  default-language:
    GHC2024

  default-extensions:
    OverloadedStrings

  type:
    exitcode-stdio-1.0

  hs-source-dirs:
    tests

  other-modules:
    FOLTest
    ProofSyntax

  main-is:
    Main.hs

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude,

  build-depends:
    Finch,
    base >=4.21.0 && <4.22,
    containers,
    directory,
    miso >=1.9 && <1.9.1,
    relude,
    tasty >=1.5.2 && <1.6,
    tasty-coverage >=0.1.4 && <0.2,
    tasty-hunit >=0.10.2 && <0.11,
    tasty-quickcheck >=0.11.1 && <0.12,
    text >=2.1.2 && <2.2,

executable finch
  import:
    options, warnings

  hs-source-dirs:
    .

  build-depends:
    Finch,
    base >=4.21.0 && <5,

  main-is:
    Main.hs

  default-language:
    GHC2024

library
  exposed-modules:
    App.Entry
    App.Model
    App.URLDecoder
    App.Update
    App.Views
    Fitch.Proof
    Fitch.Unification
    Fitch.Verification
    Parser.Formula
    Parser.IncompleteProof
    Parser.Proof
    Parser.Rule
    Parser.Util
    Specification.FOL
    Specification.Prop
    Specification.Types
    Util

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude,

  default-extensions:
    FlexibleInstances
    MultilineStrings
    OrPatterns
    OverloadedLists
    OverloadedRecordDot
    OverloadedStrings
    QuasiQuotes
    TemplateHaskell
    ViewPatterns

  build-depends:
    base >=4.21.0 && <5,
    base64,
    containers >=0.7 && <0.9,
    megaparsec >=9.7.0 && <9.8,
    miso >=1.9 && <1.9.1,
    mtl >=2.3.1 && <3,
    parser-combinators >=1.3.0 && <2,
    relude,
    text >=2.1.2 && <2.2,

  hs-source-dirs:
    src

  default-language:
    GHC2024
