cabal-version: 3.0
name: fitch-editor
version: 0.1.0.0
synopsis: TODO
description: TODO
license: BSD-3-Clause
license-file: LICENSE
author: Reijix
maintainer: Reijix
copyright: Leon Vatthauer @ 2025
category: Web
build-type: Simple

common warnings
  ghc-options:
    -funbox-strict-fields
    -O2
    -ferror-spans
    -fspecialise-aggressively
    -Wall

common javascript
  if arch(javascript)
    ld-options:
      -sEXPORTED_RUNTIME_METHODS=HEAP8

test-suite test
  default-language:
    GHC2024

  type:
    exitcode-stdio-1.0

  hs-source-dirs:
    tests

  other-modules:
    ProofSyntax

  main-is:
    test.hs

  build-depends:
    base,
    fitch-editor-lib,
    tasty,
    tasty-coverage,
    tasty-hunit,
    tasty-quickcheck,

executable fitch-editor-FOL
  import:
    javascript

  hs-source-dirs:
    apps

  default-extensions:
    OverloadedStrings

  build-depends:
    base,
    fitch-editor-lib,

  main-is:
    FOL.hs

  default-language:
    GHC2024

library fitch-editor-lib
  exposed-modules:
    App.Model
    App.Runner
    App.Views
    Fitch.Proof
    Parser.Formula
    Parser.Lexer
    Parser.Rule

  default-extensions:
    OverloadedRecordDot
    OverloadedStrings

  build-depends:
    base,
    containers,
    megaparsec,
    miso,
    mtl,
    parser-combinators,
    text,

  hs-source-dirs:
    src

  default-language:
    GHC2024
