cabal-version: 3.0
name: fitch-editor
version: 0.1.0.0
synopsis: Editing fitch-style natural deduction proofs.
description: A web application for editing fitch-style natural deduction proofs with builtin checker.
license: BSD-3-Clause
license-file: LICENSE
author: Reijix
maintainer: Reijix
copyright: Leon Vatthauer @ 2025
category: Web
build-type: Simple

source-repository head
  type: git
  location: https://github.com/Reijix/fitch-editor.git

common warnings
  ghc-options:
    -funbox-strict-fields
    -O2
    -ferror-spans
    -fspecialise-aggressively
    -Wall

common javascript
  if arch(javascript)
    ld-options:
      -sEXPORTED_RUNTIME_METHODS=HEAP8

test-suite test
  default-language:
    GHC2024

  default-extensions:
    OverloadedStrings

  type:
    exitcode-stdio-1.0

  hs-source-dirs:
    tests

  other-modules:
    ProofSyntax

  main-is:
    test.hs

  build-depends:
    base >=4.21.0 && <4.22,
    fitch-editor-lib,
    miso >=1.9 && <1.9.1,
    tasty >=1.5.2 && <1.6,
    tasty-coverage >=0.1.4 && <0.2,
    tasty-hunit >=0.10.2 && <0.11,
    tasty-quickcheck >=0.11.1 && <0.12,
    text >=2.1.2 && <2.2,

executable fitch-editor-FOL
  import:
    javascript

  hs-source-dirs:
    apps

  default-extensions:
    OverloadedStrings

  build-depends:
    base >=4.21.0 && <5,
    containers >=0.7 && <0.9,
    fitch-editor-lib,
    text >=2.1.2 && <2.2,

  main-is:
    FOL.hs

  default-language:
    GHC2024

executable fitch-editor-Prop
  import:
    javascript

  hs-source-dirs:
    apps

  default-extensions:
    OverloadedStrings

  build-depends:
    base >=4.21.0 && <5,
    containers >=0.7 && <0.9,
    fitch-editor-lib,
    text >=2.1.2 && <2.2,

  main-is:
    Prop.hs

  default-language:
    GHC2024

library fitch-editor-lib
  exposed-modules:
    App.Model
    App.Runner
    App.Views
    Fitch.Proof
    Fitch.Unification
    Parser.Formula
    Parser.Rule

  default-extensions:
    OverloadedRecordDot
    OverloadedStrings

  build-depends:
    base >=4.21.0 && <5,
    containers >=0.7 && <0.9,
    jsaddle,
    megaparsec >=9.7.0 && <9.8,
    miso >=1.9 && <1.9.1,
    mtl >=2.3.1 && <3,
    parser-combinators >=1.3.0 && <2,
    text >=2.1.2 && <2.2,

  hs-source-dirs:
    src

  default-language:
    GHC2024
